--- a/project1.html
+++ b/project1.html
@@ -83,10 +83,12 @@
               <a href="index.html">Fabian's Website</a>
               <a href="index.html">Home</a>
               <div class="dropdown">
-              <button class="dropbtn" onclick="myFunction()">Portfolio</button>
-              <div class="dropdown-content" id="myDropdown">
-              <a href="sample.html">Sample project</a>
-            </div>
+                  <button class="dropbtn" onclick="myFunction()">Portfolio</button>
+                  <div class="dropdown-content" id="myDropdown">
+                      <a href="project1.html">Project I</a>
+                  </div>
+            </div> 
+        </div>
         <script>
         /* When the user clicks on the button, 
         toggle between hiding and showing the dropdown content */
