--- a/section2.html
+++ b/section2.html
@@ -80,13 +80,15 @@
     </head>
     <body>
             <div class="container">
-              <a href="index.html">Fabian's Website</a>
-              <a href="index.html">Home</a>
-              <div class="dropdown">
-              <button class="dropbtn" onclick="myFunction()">Portfolio</button>
-              <div class="dropdown-content" id="myDropdown">
-              <a href="sample.html">Sample project</a>
+          <a href="index.html">Fabian's Website</a>
+          <a href="index.html">Home</a>
+          <div class="dropdown">
+            <button class="dropbtn" onclick="myFunction()">Portfolio</button>
+            <div class="dropdown-content" id="myDropdown">
+              <a href="project1.html">Project I</a>
             </div>
+          </div> 
+        </div>
         <script>
         /* When the user clicks on the button, 
         toggle between hiding and showing the dropdown content */
@@ -109,16 +111,17 @@
 
         </div>
             <br><br>
-            <div class="main">
-                <center><h1>Welcome to Section 2!</h1></center>
-                <img src="images/portfolio_2.gif"  width="500" height="100">
+            
 
             </div>
            <!-- Sidebar -->
             <div class="w3-sidebar w3-bar-block " style="width:12%;position:absolute;top:52px;color:blue;">
               <h3 class="w3-bar-item">Table of Contents</h3>
-              <a href="project1.html" class="w3-bar-item w3-button">Portfolio</a>
+              <a href="project1.html" class="w3-bar-item w3-button">Project 1 Home</a>
             </div>
-        
+        <div class="main">
+                <center><h1>Welcome to Section 2!</h1></center>
+                <img src="images/portfolio_2.gif" height="200" width="1000"/>
+                </div>
     </body>
 </html>
