--- a/project1.html
+++ b/project1.html
@@ -52,7 +52,7 @@
                 background-color: #f9f9f9;
                 min-width: 160px;
                 box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-                z-index: 100;
+                z-index: 1;
                 font-family:'Roboto', sans-serif;
                 top:52px;
             }
@@ -75,6 +75,8 @@
             }
             .main {
                 color:blue;
+                position:absolute;
+                left:15%;
             }
         </style>
     </head>
