--- a/section2.html
+++ b/section2.html
@@ -75,6 +75,8 @@
             }
             .main {
                 color:blue;
+                position:absolute;
+                left:15%;
             }
         </style>
     </head>
