--- a/project1.html
+++ b/project1.html
@@ -5,6 +5,7 @@
         <link rel="stylesheet" href="css/w3.css">
         <style>
             body {margin: 0;font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;text-align:center;}
+            
             .container {
   
                 background-color:#595959;
@@ -12,6 +13,7 @@
                 position:fixed;
                 top:0;
                 width: 100%;
+                z-index: 10;
 
 
             }
@@ -50,9 +52,9 @@
                 display: none;
                 position: absolute;
                 background-color: #f9f9f9;
-                min-width: 160px;
+                min-width: 200px;
                 box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-                z-index: 1;
+                z-index: 2;
                 font-family:'Roboto', sans-serif;
                 top:52px;
             }
@@ -76,7 +78,8 @@
             .main {
                 color:blue;
                 position:absolute;
-                left:15%;
+                left:25%;
+                margin:auto;
             }
         </style>
     </head>
@@ -114,12 +117,11 @@
         </div>
             <br><br>
             <div class="main">
-                <center><h1>Welcome to my portfolio!</h1></center>
+                <h1>Welcome to my Portfolio!</h1>
                 <img src="images/portfolio_title.jpg">
-
             </div>
            <!-- Sidebar -->
-            <div class="w3-sidebar w3-bar-block " style="width:12%;position:absolute;top:52px;color:blue;">
+            <div class="w3-sidebar w3-bar-block " style="width:15%;position:absolute;top:52px;color:blue;">
               <h3 class="w3-bar-item">Table of Contents</h3>
               <a href="section2.html" class="w3-bar-item w3-button">Section 2</a>
             </div>
