--- a/project1.html
+++ b/project1.html
@@ -4,7 +4,7 @@
         <title>Project I</title>
         <link rel="stylesheet" href="css/w3.css">
         <style>
-            body {margin: 0;font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;text-align:center;}
+            body {margin: 0;font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;text-align:center;color:blue;}
             
             .container {
   
