--- a/canattack3.html
+++ b/canattack3.html
@@ -16,7 +16,7 @@
               <div class="dropdown">
                   <button class="dropbtn" onclick="myFunction()">Portfolio</button>
                   <div class="dropdown-content" id="myDropdown">
-                      <a href="project1.html">Project I</a>
+                      <a href="canattack.html">App Inventor Project: Can Attack</a>
                   </div>
             </div> 
             <a href="contact.html">Contact</a>
