--- a/canattack3.html
+++ b/canattack3.html
@@ -6,6 +6,11 @@
         <link rel="stylesheet" href="css/w3.css">
         <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
         <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+        <meta charset="UTF-8">
+        <meta name="description" content="Video Demonstration">
+        <meta name="keywords" content="HTML,CSS,XML,JavaScript">
+        <meta name="author" content="Fabian Trujillo">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
         <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
@@ -17,9 +22,11 @@
                   <button class="dropbtn" onclick="myFunction()">Portfolio</button>
                   <div class="dropdown-content" id="myDropdown">
                       <a href="canattack.html">App Inventor Project: Can Attack</a>
+                      <a href="deep.html">Interactive Fiction: Deep</a>
                   </div>
             </div> 
             <a href="contact.html">Contact</a>
+            <a href="aboutme.html">About Me</a>
         </div>
         <script>
         /* When the user clicks on the button, 
