--- a/deep.html
+++ b/deep.html
@@ -50,17 +50,14 @@
             <br><br><br>
             <div class="main">
                 <h1>Interactive Fiction: Deep</h1>
-                <script type="text/javascript" language="javascript" src="https://app.creately.com/player/creately-player.js"></script>
-                <div id="creately-container-ja1dzehk1"></div>
-                <script type="text/javascript">
-                var player = new CreatelyPlayer( "creately-container-ja1dzehk1", "ja1dzehk1-lmBppyeLGJxMONUwAiZ9xlfNDw=", { width: "1510px", height: "1310px" });
-                </script>
+                <iframe height="400px" width="100%" src="https://repl.it/@fabiantrujillo/Interactive-Fiction-10?lite=true" scrolling="no" frameborder="no" allowtransparency="true" allowfullscreen="true" sandbox="allow-forms allow-pointer-lock allow-popups allow-same-origin allow-scripts allow-modals"></iframe>
             </div>
            <!-- Sidebar -->
             <div class="w3-sidebar w3-bar-block " style="width:15%;position:absolute;top:52px;color:blue;">
               <h3 class="w3-bar-item">Table of Contents</h3>
               <a href="deep2.html" class="w3-bar-item w3-button">Video Demonstration</a>
               <a href="deep3.html" class="w3-bar-item w3-button">Written Response</a>
+              <a href="deep4.html" class="w3-bar-item w3-button">Flowchart</a>
             </div>
         
     </body>
