--- a/deep2.html
+++ b/deep2.html
@@ -7,7 +7,7 @@
         <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
         <link rel="icon" href="images/favicon.ico" type="image/x-icon">
         <meta charset="UTF-8">
-        <meta name="description" content="Written Response for Can Attack">
+        <meta name="description" content="Video Demonstration for Interactive Fiction">
         <meta name="keywords" content="HTML,CSS,XML,JavaScript">
         <meta name="author" content="Fabian Trujillo">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -49,13 +49,18 @@
             <br><br>
             <div class="main">
                <h1>Video Demonstration</h1>
-               <p>Coming Soon!</p>
+               <video width="500" controls>
+                  <source src="videos/deep.mp4" type="video/mp4">
+               </video>
+               <h2>Video Response</h2>
+               <p>I am showing you how to play the Interactive Fiction called Deep created on repl.it using Python. At the start of the game, you’re presented with the title of the game “Deep” and my name and my partner’s name. At the start of the story, I hear the sound of an alarm clock. I am given the decision of wanting to wake up or not. I decide to get up, stretch and walk down to the kitchen. I come across my mom and she’s making breakfast. She asks me if I want breakfast. I am not very hungry so I am going to decline. Mom informs me to tell her if I want to eat later. Now I am confronted with two other choices. I can either go outside or go on the computer. I am going to decide to go on the computer. Then, as I finish booting up my computer, a friend of mine immediately calls me on Skype. I am given the choice to answer or decline the call. I decided that I want to answer the call. He tells me that there’s a way to get into the deep web. Huh, interesting. I am given a yes or no choice to check out the deep web. It sounds interesting so I say yes. He's given me this strange URL and now I get the chance to decide whether I type in the URL or not. I take the risk and I type in the URL. I search through a bunch of websites and find an interesting one with several puzzles. When I enter the website I find a puzzle with binary. I see the number “45” and figure that out in binary and type it in. I am confronted with another puzzle that has some sort of teal or cyan color. The template that I was given hints that it wants an RGB value so I type in 0,255,255. I defeat the puzzle and carry on with my day. This story could end differently, but it comes down to what decisions are made.</p>
             </div>
            <!-- Sidebar -->
             <div class="w3-sidebar w3-bar-block " style="width:15%;position:absolute;top:52px;color:blue;">
               <h3 class="w3-bar-item">Table of Contents</h3>
-              <a href="deep.html" class="w3-bar-item w3-button">Flowchart</a>
+              <a href="deep.html" class="w3-bar-item w3-button">Interactive Fiction</a>
               <a href="deep3.html" class="w3-bar-item w3-button">Written Response</a>
+              <a href="deep4.html" class="w3-bar-item w3-button">Flowchart</a>
             </div>
         
     </body>
