--- a/aboutme.html
+++ b/aboutme.html
@@ -28,7 +28,8 @@
             <a href="aboutme.html">About Me</a>
         </div>
         <script>
-        /* When the user clicks on the button, 
+        /* When the user clicks on the button, *+
+        . 
         toggle between hiding and showing the dropdown content */
         function myFunction() {
             document.getElementById("myDropdown").classList.toggle("show");
