--- a/atm4.html
+++ b/atm4.html
@@ -22,6 +22,8 @@
                   <div class="dropdown-content" id="myDropdown">
                       <a href="canattack.html">App Inventor Project: Can Attack</a>
                       <a href="deep.html">Interactive Fiction: Deep</a>
+                      <a href="atm.html">Python Project: ATM Program</a>
+                      <a href="RSA.html">RSA Project</a>
                   </div>
             </div> 
             <a href="contact.html">Contact</a>
