--- a/deep.html
+++ b/deep.html
@@ -21,6 +21,8 @@
                   <button class="dropbtn" onclick="myFunction()">Portfolio</button>
                   <div class="dropdown-content" id="myDropdown">
                       <a href="canattack.html">App Inventor Project: Can Attack</a>
+                      <a href="atm.html">Python Project: ATM Program</a>
+                      <a href="RSA.html">RSA Project</a>
                   </div>
             </div> 
             <a href="contact.html">Contact</a>
