--- a/deep3.html
+++ b/deep3.html
@@ -20,6 +20,9 @@
                   <button class="dropbtn" onclick="myFunction()">Portfolio</button>
                   <div class="dropdown-content" id="myDropdown">
                       <a href="canattack.html">App Inventor Project: Can Attack</a>
+                      <a href="deep.html">Interactive Fiction: Deep</a>
+                      <a href="atm.html">Python Project: ATM Program</a>
+                      <a href="RSA.html">RSA Project</a>
                   </div>
             </div> 
             <a href="contact.html">Contact</a>
