--- a/RSA4.html
+++ b/RSA4.html
@@ -53,7 +53,7 @@
             <br><br><br>
             <div class="main">
                 <h1>Screenshots</h1>
-                <p>Algorithm</p>
+                <h3>Algorithm</h3>
                 <img src="images/algorithm_rsa.PNG">
                 <br><br>
                 <h3>Abstraction</h3>
