--- a/RSA3.html
+++ b/RSA3.html
@@ -24,6 +24,7 @@
                       <a href="deep.html">Interactive Fiction: Deep</a>
                       <a href="atm.html">Python Project: ATM Program</a>
                       <a href="RSA.html">RSA Project</a>
+                      <a href="gui.html">Java GUI Project</a>
                   </div>
             </div> 
             <a href="contact.html">Contact</a>
