--- a/deep.html
+++ b/deep.html
@@ -23,6 +23,7 @@
                       <a href="canattack.html">App Inventor Project: Can Attack</a>
                       <a href="atm.html">Python Project: ATM Program</a>
                       <a href="RSA.html">RSA Project</a>
+                      <a href="gui.html">Java GUI Project</a>
                   </div>
             </div> 
             <a href="contact.html">Contact</a>
