--- a/deep4.html
+++ b/deep4.html
@@ -19,10 +19,11 @@
               <div class="dropdown">
                   <button class="dropbtn" onclick="myFunction()">Portfolio</button>
                   <div class="dropdown-content" id="myDropdown">
-                      <a href="canattack.html">App Inventor Project: Can Attack</a>
+                     <a href="canattack.html">App Inventor Project: Can Attack</a>
                       <a href="deep.html">Interactive Fiction: Deep</a>
                       <a href="atm.html">Python Project: ATM Program</a>
                       <a href="RSA.html">RSA Project</a>
+                      <a href="gui.html">Java GUI Project</a>
                   </div>
             </div> 
             <a href="contact.html">Contact</a>
